add link in the button "more"

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
 										<header>
 											<h1>Olá, seja muito bem vindo(a) ao meu portfólio de<br />
 											 projetos de Ciência de Dados.</h1>
-											<p>Nessa página, eu demonstro minhas habilidades de resolver problemas de negócio utilizando conceitos e ferramentas de Ciência de Dados, através de projetos com dados públicos.</p>
-										</header>
-										<p>Aqui, você encontrará minhas experiências profissionais, habilidades, ferramentas e conceitos envolvendo a Ciência de Dados.<br />
+											<p>Nessa página, eu demonstro minhas habilidades em resolver problemas de negócio utilizando conceitos e ferramentas de Ciência de Dados, através de projetos com dados públicos.</p>
+											<p>Aqui, você encontrará minhas experiências profissionais, habilidades, ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 											Sinta-se à vontade para entrar em contato através dos links no final da página.
+										</header>
+										
 									</div>
 									<span class="image object">
 										<img style="object-position: top;" src="images/img_jhonatans.jpg" alt="" />
@@ -51,7 +52,7 @@
 											<h1>Sobre mim</h1>
 										</header>
 										<!-- Content -->
-											<h2 id="content">Menu nome é Jhonatans Lopes</h2>
+											<h2 id="content">Meu nome é Jhonatans Lopes</h2>
 											<p>Estou cursando o 5º semestre de Ciência da Computação e trabalho como Operador de Logística.</p>
 											<p>
 												Atualmente, trabalho na criação de sistemas de monitoramento para viagens e criação, acompanhamento e validação de cadastros para motoristas e veículos novos. E também, trabalho com projetos pessoais sobre Ciência de Dados, para adquirir experiência na solução de problemas de negócio e domínio sobre as ferramentas de análise de dados.
@@ -161,7 +162,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="https://github.com/Jhonatanslopes/Etl-Car-Recommendation" class="image"><img src="images/car.jpg" alt="" /></a>
+											<a href="" class="image"><img src="images/car.jpg" alt="" /></a>
 											<h3>ETL para uma empresa de revenda de carros usados.</h3>
 											<p>Eu usei Python, técnicas de Web Scraping, manipulação e limpeza de dados para melhorar a eficiência e produtividade no processo por procura de carros na web para comprar e revender, a fim de automatizar a coleta de dados e a disponibilização aos interessados de forma rápida, fácil e segura.</p>
 											<h4>As ferramentas utilizadas foram:</h4>
@@ -173,11 +174,11 @@
 												<li>Outlook.</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="#" class="button">Saiba Mais</a></li>
+												<li><a href="https://github.com/Jhonatanslopes/Etl-Car-Recommendation" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://github.com/Jhonatanslopes/Startup-Investment-Success" class="image"><img src="images/unicorn.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/unicorn.jpg" alt="" /></a>
 											<h3>Identificação de boas startups para um fundo de investimentos alocar capital.</h3>
 											<p>Eu usei Python, estatística e técnicas de análise de dados para ajudar um fundo de investimentos a expandir seu portfólio para outros países. A fim de encontrar boas opções de startups com base em suas características como: mercado alvo, tempo que está operando e investimentos anteriores para retornar uma lista com as melhores opções para aportar capital financeiro.</p>
 											<h4>As ferramentas utilizadas foram:</h4>
@@ -188,11 +189,11 @@
 												<li>Análise Univariada, Bivariada e Multivariada.</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="#" class="button">Saiba Mais</a></li>
+												<li><a href="https://github.com/Jhonatanslopes/Startup-Investment-Success" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://github.com/Jhonatanslopes/Airline-Customer-Satisfaction" class="image"><img src="images\airline.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images\airline.jpg" alt="" /></a>
 											<h3>Identificação de melhorias para aumentar a satisfação dos passageiros de uma companhia aérea.</h3>
 											<p>Eu usei Python, estatística e técnicas de análise de dados para ajudar uma companhia aérea aumentar a satisfação dos passageiros, identificando o perfil dos passageiros insatisfeitos e os 5 serviços que mais deixam a desejar e sugerir quais devem ser melhorados para obter um resultado positivo na satisfação.</p>
 											<h4>As ferramentas utilizadas foram:</h4>
@@ -203,7 +204,7 @@
 												<li>Análise Univariada, Bivariada e Multivariada.</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="#" class="button">Saiba Mais</a></li>
+												<li><a href="https://github.com/Jhonatanslopes/Airline-Customer-Satisfaction" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
 									</div>
