--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 											<h1>Olá, seja muito bem vindo(a) ao meu portfólio de<br />
 											 projetos de Ciência de Dados.</h1>
 											<p>Nessa página, eu demonstro minhas habilidades em resolver problemas de negócio utilizando conceitos e ferramentas de Ciência de Dados, através de projetos com dados públicos.</p>
-											<p>Aqui, você encontrará minhas experiências profissionais, habilidades, ferramentas e conceitos envolvendo a Ciência de Dados.<br />
-											Sinta-se à vontade para entrar em contato através dos links no final da página.
+											<p>Aqui, você encontrará minhas experiências profissionais, habilidades, ferramentas e conceitos envolvendo a Ciência de Dados.</p>
+											<p>Sinta-se à vontade para entrar em contato através dos links no final da página.</p>
 										</header>
 										
 									</div>
