--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/image_principal.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/image_principal.jpg" height="373" alt="" /></a>
 											<h3>Previsão de Vendas das próximas 6 semanas para uma Rede de Farmacias.</h3>
 											<p>Eu usei Python, Estatística e técnicas supervisionadas de Machine Learning para ajudar o time de negócio a identificar se as vendas das próximas 6 semanas serião suficientes para realizar uma reforma nas lojas da rede de farmacias.</p>
 											<h4>As ferramentas utilizadas foram:</h4>
@@ -162,7 +162,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="" class="image"><img src="images/car.jpg" alt="" /></a>
+											<a href="" class="image"><img src="images/car.jpg" height="373" alt="" /></a>
 											<h3>ETL para uma empresa de revenda de carros usados.</h3>
 											<p>Eu usei Python, técnicas de Web Scraping, manipulação e limpeza de dados para melhorar a eficiência e produtividade no processo por procura de carros na web para comprar e revender, a fim de automatizar a coleta de dados e a disponibilização aos interessados de forma rápida, fácil e segura.</p>
 											<h4>As ferramentas utilizadas foram:</h4>
@@ -178,9 +178,9 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/unicorn.jpg" alt="" /></a>
-											<h3>Identificação de boas startups para um fundo de investimentos alocar capital.</h3>
-											<p>Eu usei Python, estatística e técnicas de análise de dados para ajudar um fundo de investimentos a expandir seu portfólio para outros países. A fim de encontrar boas opções de startups com base em suas características como: mercado alvo, tempo que está operando e investimentos anteriores para retornar uma lista com as melhores opções para aportar capital financeiro.</p>
+											<a href="#" class="image"><img src="images/house.jpg" height="373" alt="" /></a>
+											<h3>Identificação das melhores oportunidades no mercado de imóveis com foco em maximizar a receita.</h3>
+											<p>Eu usei Python, estatística e técnicas de análise de dados para ajudar uma plataforma digital no mercado de imóveis a encontrar melhores oportunidades e maximizar a receita recomendando quais imóveis devem ser comprados, qual o melhor momento para vender e por qual preço.</p>
 											<h4>As ferramentas utilizadas foram:</h4>
 											<ul>
 												<li>Git, GitHub.</li>
@@ -189,19 +189,20 @@
 												<li>Análise Univariada, Bivariada e Multivariada.</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="https://github.com/Jhonatanslopes/Startup-Investment-Success" class="button">Saiba Mais</a></li>
+												<li><a href="https://github.com/Jhonatanslopes/House-Resale-Recommendation" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images\airline.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images\airline.jpg" height="373" alt="" /></a>
 											<h3>Identificação de melhorias para aumentar a satisfação dos passageiros de uma companhia aérea.</h3>
-											<p>Eu usei Python, estatística e técnicas de análise de dados para ajudar uma companhia aérea aumentar a satisfação dos passageiros, identificando o perfil dos passageiros insatisfeitos e os 5 serviços que mais deixam a desejar e sugerir quais devem ser melhorados para obter um resultado positivo na satisfação.</p>
+											<p>Eu usei Python, Power BI, estatística e técnicas de análise de dados para ajudar uma companhia aérea aumentar a satisfação dos passageiros, identificando o perfil dos passageiros insatisfeitos e os 5 serviços que mais deixam a desejar e sugerir quais devem ser melhorados para obter um resultado positivo na satisfação.</p>
 											<h4>As ferramentas utilizadas foram:</h4>
 											<ul>
 												<li>Git, GitHub.</li>
 												<li>Python, Pandas, Matplotlib, Seaborn.</li>
 												<li>Jupter Notebook.</li>
 												<li>Análise Univariada, Bivariada e Multivariada.</li>
+												<li>Power BI.</li>
 											</ul>
 											<ul class="actions">
 												<li><a href="https://github.com/Jhonatanslopes/Airline-Customer-Satisfaction" class="button">Saiba Mais</a></li>
