add project car_insurance

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 											<h2 id="content">Meu nome é Jhonatans Lopes</h2>
 											<p>Estou cursando o 5º semestre de Ciência da Computação e trabalho como Operador de Logística.</p>
 											<p>
-												Atualmente, trabalho na criação de sistemas de monitoramento para viagens e criação, acompanhamento e validação de cadastros para motoristas e veículos novos. E também, trabalho com projetos pessoais sobre Ciência de Dados, para adquirir experiência na solução de problemas de negócio e domínio sobre as ferramentas de análise de dados.
+												Atualmente, trabalho na criação de solicitações de monitoramento para viagens, acompanhamento, criação e validação de cadastros para motoristas e veículos novos. E também, trabalho com projetos pessoais sobre Ciência de Dados, para adquirir experiência na solução de problemas de negócio e domínio sobre as ferramentas de análise de dados.
 											</p>
 											<p>
 												Estou buscando uma oportunidade de trabalhar profissionalmente como Cientista de Dados para melhorar a tomada de decisão da empresa, através da construção de soluções usando dados.
@@ -76,7 +76,7 @@
 													<li>Python com foco em análise de dados.</li>
 													<li>Web Scraping com python.</li>
 													<li>SQL para extração de dados.</li>
-													<li>Banco de dados SQLite, MySQL, SQLserver.</li>
+													<li>Banco de dados SQLite, MySQL, SQLserver e PostgreSQL</li>
 												</ul>
 											</div>
 										</article>
@@ -88,7 +88,7 @@
 													<li>Estatística descritiva (Localização, dispersão, assimetria, kurtosis, densidade).</li>
 													<li>Algoritmos de Regressão, Classificação.</li>
 													<li>Técnicas de Seleção de Atributos.</li>
-													<li>Métricas de performance dos algoritmos (RMSE, MAE, MAPE).</li>
+													<li>Métricas de performance dos algoritmos: RMSE, MAE, MAPE, Precision @k, Recall @k, curva Lift e curva Gains Cumulative.</li>
 													<li>Pacotes de Machine Learning: Sklearn, Scipy.</li>
 												</ul>
 											</div>
@@ -128,8 +128,9 @@
 											<p>
 												Construção de Soluções de dados para problemas de negócio próximos dos desafios reais das empresas, utilizando dados públicos de Ciência de Dados, onde o problema foi abordado desde a concepção do desafio de negócio até a publicação do Algoritmo treinado em produção, utlizando ferramentas de Cloud Computing.
 											</p>
-											<h2 id="content">2 anos como Operador de Logística.</h2>
+											<h2 id="content">+ 2 anos em Logística.</h2>
 											<p>
+												Criação de relatórios para acompanhamento, cobrança e validação de todo o processo de POD do cliente Samsung.
 												Criação de Dashboards, apresentações de dados e indicadores pra medir a performace de viagens do cliente e análise para identificar motivos de atrasos e perdas dos agendamentos nas operações Samsung e Carrefour.
 											</p>
 											<h2 id="content">1 ano e 7 meses como Jovem Aprendiz Administrativo.</h2>
@@ -152,10 +153,10 @@
 											<ul>
 												<li>Git, GitHub.</li>
 												<li>Python, Pandas, Matplotlib, Seaborn.</li>
-												<li>Jupter Notebook.</li>
+												<li>Jupyter Notebook.</li>
 												<li>Regressão Linear, Regressão Linear Regularizada, Random Forest Regressor, XGboost Regressor.</li>
 												<li>Heroku Cloud.</li>
-												<li>API´s, Bot Telegram.</li>
+												<li>API´s, Bot Telegram, Flask.</li>
 											</ul>
 											<ul class="actions">
 												<li><a href="https://github.com/Jhonatanslopes/Rossmann-Sales-Forecast" class="button">Saiba Mais</a></li>
@@ -179,7 +180,7 @@
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/house.jpg" height="373" alt="" /></a>
-											<h3>Identificação das melhores oportunidades no mercado de imóveis com foco em maximizar a receita.</h3>
+											<h3>Maximização de receita encontrando melhores oportunidades no mercado de imóveis.</h3>
 											<p>Eu usei Python, estatística e técnicas de análise de dados para ajudar uma plataforma digital no mercado de imóveis a encontrar melhores oportunidades e maximizar a receita recomendando quais imóveis devem ser comprados, qual o melhor momento para vender e por qual preço.</p>
 											<h4>As ferramentas utilizadas foram:</h4>
 											<ul>
@@ -206,6 +207,24 @@
 											</ul>
 											<ul class="actions">
 												<li><a href="https://github.com/Jhonatanslopes/Airline-Customer-Satisfaction" class="button">Saiba Mais</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images\insurance3.jpg" height="373" alt="" /></a>
+											<h3>Previsão de interesse na compra de um seguro de automóvel para uma campanha de venda cruzada.</h3>
+											<p>Eu usei Python, Estatística e técnicas supervisionadas de Machine Learning para ajudar o time de vendas a priozar as pessoas com maior interesse em um seguro de automóvel, com foco em realizar apenas contatos com clientes mais propensos a realizar a compra.</p>
+											<h4>As ferramentas utilizadas foram:</h4>
+											<ul>
+												<li>Git, GitHub.</li>
+												<li>Python, Pandas, Matplotlib, Seaborn.</li>
+												<li>SQL</li>
+												<li>Jupyter Notebook, VS Code.</li>
+												<li>KNN, Logistic Regression, Random Forest, XGBoost e Naive Bayes.</li>
+												<li>Heroku Cloud.</li>
+												<li>API´s, Streamlit, Flask.</li>
+											</ul>
+											<ul class="actions">
+												<li><a href="https://github.com/Jhonatanslopes/Health-Insurance-Cross-sell" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
 									</div>
