--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 										</header>
 										<!-- Content -->
 											<h2 id="content">Meu nome é Jhonatans Lopes</h2>
-											<p>Estou cursando o 5º semestre de Ciência da Computação e trabalho como Operador de Logística.</p>
+											<p>Estou cursando o 5º semestre de Ciência da Computação e trabalho como Analista de Logística.</p>
 											<p>
 												Atualmente, trabalho na criação de solicitações de monitoramento para viagens, acompanhamento, criação e validação de cadastros para motoristas e veículos novos. E também, trabalho com projetos pessoais sobre Ciência de Dados, para adquirir experiência na solução de problemas de negócio e domínio sobre as ferramentas de análise de dados.
 											</p>
