add project about fraud detection

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 													<li>Estatística descritiva (Localização, dispersão, assimetria, kurtosis, densidade).</li>
 													<li>Algoritmos de Regressão, Classificação.</li>
 													<li>Técnicas de Seleção de Atributos.</li>
-													<li>Métricas de performance dos algoritmos: RMSE, MAE, MAPE, Precision @k, Recall @k, curva Lift e curva Gains Cumulative.</li>
+													<li>Métricas de performance dos algoritmos: RMSE, MAE, MAPE, Precision @k, Recall @k, curva Lift, curva Gains Cumulative, Balanced Accuracy, Precision e Recall</li>
 													<li>Pacotes de Machine Learning: Sklearn, Scipy.</li>
 												</ul>
 											</div>
@@ -124,7 +124,7 @@
 										</header>
 
 										<!-- Content -->
-											<h2 id="content">5 Projetos completos de Ciência de Dados.</h2>
+											<h2 id="content">6 Projetos completos de Ciência de Dados.</h2>
 											<p>
 												Construção de Soluções de dados para problemas de negócio próximos dos desafios reais das empresas, utilizando dados públicos de Ciência de Dados, onde o problema foi abordado desde a concepção do desafio de negócio até a publicação do Algoritmo treinado em produção, utlizando ferramentas de Cloud Computing.
 											</p>
@@ -225,6 +225,24 @@
 											</ul>
 											<ul class="actions">
 												<li><a href="https://github.com/Jhonatanslopes/Health-Insurance-Cross-sell" class="button">Saiba Mais</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images\transaction2.jpg" height="373" alt="" /></a>
+											<h3>Detecção de fraude em transações financeiras para uma empresa de serviços.</h3>
+											<p>Eu usei Python, Estatística e técnicas supervisionadas de Machine Learning para ajudar uma empresa de serviços aumentar o faturamento e crescimento com os resultados de um modelo de alta acuracia na detecção de fraude em transações financeiras para seus clientes.</p>
+											<h4>As ferramentas utilizadas foram:</h4>
+											<ul>
+												<li>Git, GitHub.</li>
+												<li>Python, Pandas, Matplotlib, Seaborn.</li>
+												<li>PostgreSQL, SQL</li>
+												<li>Jupyter Notebook, VS Code.</li>
+												<li>Baseline Model, Naive Bayes, Logistic Regression, Random Forest, LGBM.</li>
+												<li>Heroku Cloud.</li>
+												<li>API´s, Streamlit, Flask.</li>
+											</ul>
+											<ul class="actions">
+												<li><a href="https://github.com/Jhonatanslopes/Financial-Fraud-Detection" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
 									</div>
