add project - Churn

--- a/index.html
+++ b/index.html
@@ -245,6 +245,24 @@
 												<li><a href="https://github.com/Jhonatanslopes/Financial-Fraud-Detection" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
+										<article>
+											<a href="#" class="image"><img src="images/churn7.jpg" height="373" alt="" /></a>
+											<h3>Previsão e ranqueamento de clientes em churn para um banco.</h3>
+											<p>Eu usei Python, Estatística e técnicas supervisionadas de Machine Learning para ajudar o time de negócio a identificar os 50 clientes mais propensos a entrar em Churn e criar uma estratégia baseada em cupom de desconto para impulsionar o cliente a permanecer e reduzir a taxa de Churn.</p>
+											<h4>As ferramentas utilizadas foram:</h4>
+											<ul>
+												<li>Git, GitHub.</li>
+												<li>Python, Pandas, Matplotlib, Seaborn.</li>
+												<li>PostgreSQL, SQL</li>
+												<li>Jupyter Notebook, VS Code.</li>
+												<li>Naive Bayes, Logistic Regression, KNN, Random Forest, LGBM, XGBoost, Combinação (Ensemble) de modelos .</li>
+												<li>Heroku Cloud.</li>
+												<li>API´s, Streamlit, Flask.</li>
+											</ul>
+											<ul class="actions">
+												<li><a href="https://github.com/Jhonatanslopes/Bank-Customer-Churn" class="button">Saiba Mais</a></li>
+											</ul>
+										</article>
 									</div>
 								</section>
 								<section>
